main page skeleton done

--- a/index.html
+++ b/index.html
@@ -1,9 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="styles/main.css" />
+        <title>Portfolio</title>
     </head>
     <body>
-        hello world
+        <header class="text-white">
+            <nav class="container">
+                <div class="row">
+                    <div class="col float-left">
+                        <img src="images/temp_logo.jpg" alt="logo" height="50px" />
+                    </div>
+                    <div class="col float-right">
+                        <div class="dropdown float-right">
+                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <svg class="fill-lt" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" id="fill-white">
+                                    <title>menu</title>
+                                    <path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z"></path>
+                                    </svg>
+                            </button>
+                            <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                          </div>
+
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="main-section background-img">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col fill-bg d-flex justify-content-center">
+                        <p class="">
+                            About me paragraph: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        </p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-3">
+                        <a href="" class="btn main text-white bold align-middle font-weight-bold">More About Me</a>
+                </div>
+            </div>
+        </div>
+        <div class="main-section light-bg">
+            <div class="container pt-5 pb-5">
+                <div class="d-flex justify-content-around skill-list">
+                    <div class="lead"><img src="./images/SVG/html5.svg" alt="html5" class="" /> HTML5</div>
+                    <div class="lead"><img src="./images/SVG/css3.svg" alt="css"/> CSS</div>
+                </div>
+                <div class="d-flex justify-content-around skill-list">
+                    <div class="mt-3 lead"><img src="./images/SVG/bootstrap.svg" alt="bootstrap" class="" /> Bootstrap</div>
+                    <div class="mt-3 lead"><img src="./images/SVG/sass.svg" alt="sass"/> SASS</div>
+                </div>
+                <div class="d-flex justify-content-around skill-list">
+                    <div class="mt-3 lead"><img src="./images/SVG/javascript.svg" alt="javascript" class="" /> JavaScript</div>
+                    <div class="mt-3 lead"><img src="./images/SVG/adobe.svg" alt="adobe"/> Adobe</div>
+                </div>
+            </div>
+        </div>
+        <div class="main-section background-img">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col fill-bg d-flex justify-content-center">
+                        <h2>Latest Project</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col fill-bg d-flex justify-content-center">
+                        <img src="images/latest_project.PNG" alt="latest project" class="img-fluid img-thumbnail" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-section light-bg">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <h2>Latest Post</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At in tellus integer feugiat scelerisque varius morbi. Fermentum </p>
+                              <a href="#" class="btn main text-white bold align-middle font-weight-bold">View Post</a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer color-lt">
+            <div class="container">
+                <div class="d-flex justify-content-center">
+                    <span class="p-4">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <title>envelop</title>
+                        <path class="fill-lt" d="M29 4h-26c-1.65 0-3 1.35-3 3v20c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-20c0-1.65-1.35-3-3-3zM12.461 17.199l-8.461 6.59v-15.676l8.461 9.086zM5.512 8h20.976l-10.488 7.875-10.488-7.875zM12.79 17.553l3.21 3.447 3.21-3.447 6.58 8.447h-19.579l6.58-8.447zM19.539 17.199l8.461-9.086v15.676l-8.461-6.59z"></path>
+                        </svg>
+                        <img src="/images/PNG/envelop.png" class="email-alt" alt="email" />
+                    </span>
+                    <span class="p-4">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <title>github</title>
+                            <path class="fill-lt" d="M16 0.395c-8.836 0-16 7.163-16 16 0 7.069 4.585 13.067 10.942 15.182 0.8 0.148 1.094-0.347 1.094-0.77 0-0.381-0.015-1.642-0.022-2.979-4.452 0.968-5.391-1.888-5.391-1.888-0.728-1.849-1.776-2.341-1.776-2.341-1.452-0.993 0.11-0.973 0.11-0.973 1.606 0.113 2.452 1.649 2.452 1.649 1.427 2.446 3.743 1.739 4.656 1.33 0.143-1.034 0.558-1.74 1.016-2.14-3.554-0.404-7.29-1.777-7.29-7.907 0-1.747 0.625-3.174 1.649-4.295-0.166-0.403-0.714-2.030 0.155-4.234 0 0 1.344-0.43 4.401 1.64 1.276-0.355 2.645-0.532 4.005-0.539 1.359 0.006 2.729 0.184 4.008 0.539 3.054-2.070 4.395-1.64 4.395-1.64 0.871 2.204 0.323 3.831 0.157 4.234 1.026 1.12 1.647 2.548 1.647 4.295 0 6.145-3.743 7.498-7.306 7.895 0.574 0.497 1.085 1.47 1.085 2.963 0 2.141-0.019 3.864-0.019 4.391 0 0.426 0.288 0.925 1.099 0.768 6.354-2.118 10.933-8.113 10.933-15.18 0-8.837-7.164-16-16-16z"></path>
+                            </svg>
+                        <img src="/images/PNG/github.png" class="github-alt" alt="Github" />
+                    </span>
+                    <span class="p-4">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <title>linkedin</title>
+                            <path class="fill-lt" d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM12 26h-4v-14h4v14zM10 10c-1.106 0-2-0.894-2-2s0.894-2 2-2c1.106 0 2 0.894 2 2s-0.894 2-2 2zM26 26h-4v-8c0-1.106-0.894-2-2-2s-2 0.894-2 2v8h-4v-14h4v2.481c0.825-1.131 2.087-2.481 3.5-2.481 2.488 0 4.5 2.238 4.5 5v9z"></path>
+                            </svg>
+                        <img src="/images/PNG/linkedin.png" class="github-alt" alt="LinkedIn" />
+                    </span>
+                </div>
+                <d class="d-flex justify-content-center">
+                    <label for="search" class="sr-only text-white">Search:</label>
+                    <input type="text" name="search" id="search" placeholder="Search">
+                </d>
+                <d class="d-flex justify-content-center">
+                    <p class="lead">Looking for a web developer? <a href="">Contact me!</a></p>
+                </d>
+            </div>
+        </footer>
+
+
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
     </body>
 </html>
